--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,6 @@
 		color: #A5158C;
 		font-size: 80px;
 		text-align:center;
-		font-family: serif;
 	}
 	header{
 		display:flex;
@@ -52,4 +51,24 @@
 	}
 	p{
 		color: #d6d6d6;
+	}
+	.diferenteTitulo{
+		text-align:left;
+		font-size: 30px;
+		
+	}
+	
+	/* Experimental */
+	
+	.input-error {
+		border: 5px solid red; /* Borde rojo en caso de error */
+		background-color: #fdd; /* Fondo ligeramente rojo  */
+	}
+	
+	.win{
+		color:#00ff00;
+	}
+	.adivinaNUM{
+		border:4px solid purple;
+		text-align: center;
 	}
